# network-latency-profiler

./: CMakeLists.txt  Makefile  README.md  analyze.py  demo_recv.csv  demo_send.csv  netem_tests.sh  profile_cpu.sh  run_benchmark.sh  setup.sh  udp_receiver  udp_sender
include/udp_benchmark/: common.hpp  congestion_control.hpp  network_utils.hpp  packet.hpp  reliability.hpp  stats.hpp
src/: udp_receiver.cpp  udp_sender.cpp
src/core/: common.cpp
src/network/: network_utils.cpp  packet.cpp
src/reliability/: congestion_control.cpp  reliability.cpp
src/utils/: stats.cpp
